Fix overflow issue

--- a/src/components/common/style.scss
+++ b/src/components/common/style.scss
@@ -243,7 +243,7 @@
 .paginated-list {
     display: flex;
     flex-direction: column;
-    overflow-y: scroll;
+    overflow-y: auto;
     padding: 1rem;
     height: 100%;
     width: 100%;
